change name files

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>BrocoderS</title>
-	<link rel="stylesheet" type="text/css" href="first_tast.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 		
 <body>
