change project(use IIFE)

--- a/index.html
+++ b/index.html
@@ -1,43 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>BrocoderS</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>First_task</title>
+	<link href="style.css" rel="stylesheet">
 </head>
-		
 <body>
-<div>
-	<table class="tbl" id="tbl" onmouseover="showButtons()" onmouseout="hiddenButtons()">
-		<tr>
-			<td> </td>
-			<td> </td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td> </td>
-			<td> </td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td> </td>
-			<td> </td>
-			<td> </td>
-			<td> </td>
-		</tr>
-		<tr>
-			<td> </td>
-			<td> </td>
-			<td> </td>
-			<td> </td>
-		</tr>
-	</table>
-<button id="but_del_top"  class="hidden_button" onclick="delCols(this)"> - </button>
-<button id="but_del_left" class="hidden_button"  onclick="delRows(this)"> - </button>
-<button id="but_first" onclick="addCols()"> + </button>
-<button id="but_second"  onclick="addRows()"> + </button>
-</div>
-<script src="first_tast.js"> </script>	
+
+	
+<script type="text/javascript" src="first_tast.js"></script>
 </body>
 </html>
