edit task, use classes in es6

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>First_task</title>
+	<title>Testing...</title>
 	<link href="style.css" rel="stylesheet">
 </head>
 <body>
