fixed some bugs

--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Testing...</title>
-	<link href="style.css" rel="stylesheet">
-</head>
-<body>
-
-	
-<script type="text/javascript" src="first_tast.js"></script>
-</body>
+  <head>
+    <title>Testing...</title>
+    <link href="style.css" rel="stylesheet" />
+  </head>
+  <body>
+    <script type="text/javascript" src="first_tast.js"></script>
+  </body>
 </html>
